# dawdle-todo

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.160f042  CMakeLists.txt.user.fdbfc1c  README.md  configure  main.cpp  qml.qrc  resource.qrc  vcpkg.json
.github/workflows/: c-cpp.yml
component/: CheckButton.qml  ExpandableItem.qml  ExpandableList.qml  HomeMenuItem.qml  HomePageMenu.qml  Main.qml  Main.qml.autosave  TaskCreationPopup.qml  TaskDetailBase.qml  TaskOverviewBar.qml  TaskOverviewGroup.qml  TitleButton.qml  TodoSideBar.qml  WindowTitle.qml
cpp/: main.cpp
cpp/model/: catppuccin_palette_type.cpp  catppuccin_palette_type.hpp  todo_group.hpp
cpp/services/: database_service.cpp  database_service.hpp  todo_group_table.cpp  todo_group_table.hpp
cpp/theme/: catppuccin_basic.hpp  catppuccin_factory.cpp  catppuccin_factory.hpp  catppuccin_latte.cpp  catppuccin_latte.hpp  catppuccin_mocha.cpp  catppuccin_mocha.hpp  catppuccin_provider.cpp  catppuccin_provider.hpp
cpp/utils/: panel_manager.cpp  panel_manager.hpp  simple_id.cpp  simple_id.hpp
docs/: todo_data_key.json5  todo_data_value.json5  todo_db_data.txt  需求分析报告.md
docs/uml/: 时序图.wsd  状态图.wsd  用例图.wsd  类图.wsd  部署图.wsd
qml/components/: MoveableWindow.qml  RoundedRectangle.qml  TitleButton.qml  WindowTitle.qml
qml/utils/: ThemeSwitcher.qml
qml/views/: Main.qml  TimeDisplayPanel.qml  WeatherPanel.qml
res/: res.qrc
res/sql/: query.json  query.sql
src/: catppuccin_latte.h  database_service.cpp  database_service.hpp  db_query_reader.cpp  db_query_reader.hpp  duck_service.cpp  duck_service.hpp  level_database_service.cpp  level_database_service.hpp  main.cpp  main_window.cpp  main_window.hpp  random_value.cpp  random_value.hpp  simple_id.cpp  simple_id.hpp  singleton_database.cpp  singleton_database.hpp  test_object.cpp  test_object.hpp  todo_manager.cpp  todo_manager.hpp  todo_manager_provider.cpp  todo_manager_provider.hpp  todo_structure.cpp  todo_structure.h  todo_structure.hpp  todo_title_model.cpp  todo_title_model.hpp  two_level_list_model.cpp  two_level_list_model.hpp
ui/: BottomPanel.qml  DeleteButton.qml  Main.qml  PanelTaskForm.qml  Placeholder.qml  RadioRectangle.qml  TaskBar.qml
